Change log for Lingua::Identify::CLD2

0.02
  - Fixed return value.

0.01  Mon Jun 08 10:41:00 2015
  - Initial release to CPAN.
