@@ -1,7 +1,10 @@
 Change log for Lingua::Identify::CLD2
 
 0.02
+  - Changed API to accept hash of options as second parameter.
   - Fixed return value.
+  - Fixed LanguageCloseSet to accept string language codes (in addition to integer numbers).
+  - Croak on invalid UTF-8.
 
 0.01  Mon Jun 08 10:41:00 2015
   - Initial release to CPAN.
